--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 
 <router-outlet />
 <app-header></app-header>
+
+<main>
+    <ul id="users">
+        <li>
+            <app-user></app-user>
+        </li>
+    </ul>
+</main>
