--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,21 @@
 
-<router-outlet />
 <app-header></app-header>
 
 <main>
-    <ul id="users">
-        <li>
-            <app-user></app-user>
-        </li>
-    </ul>
+  <ul id="users">
+    @for(user of users; track user.id ){
+      <li>
+        <app-user [user]="user" [selected]="user.id === selectedUserId"  (select)="onSelectUser($event)" />
+      </li>
+    }
+  
+  </ul>
+
+  @if(SelectedUser){
+    <app-tasks  [userId]="SelectedUser.id" [name]="SelectedUser.name"/>
+  }
+  @else {
+      <p id="fallback"> Select a user to see task!</p>
+  }
+
 </main>
