--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,7 @@
 <div>
-  <button (click)="onClickUser()">
-    <img [src]="imagePath" [alt]="selectUser.name" />
-    <span>{{ selectUser.name }}</span>
+  <button [class.active]="selected" (click)="onClickUser()">
+    <img [src]="onImagePath" [alt]="user.name" />
+    <span>{{ user.name }}</span>
   </button>
 </div>
+  
